tests/fixtures/invalid/pow_str_str_list.py
# Cannot call pow() with Str, Str, List[int]
x = pow("hello", "hello", [1, 2, 3])
